rename _shared => shared

--- a/experiments/0_free_production/experiment-cond-0.html
+++ b/experiments/0_free_production/experiment-cond-0.html
@@ -18,25 +18,25 @@
 
         </script><!-- external general utilities -->
 
-        <script src="../_shared/js/jquery-1.11.1.min.js"></script>
-        <script src="../_shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
-        <script src="../_shared/js/underscore-min.js"></script>
-        <!-- <script src="../_shared/js/raphael-min.js"></script> -->
+        <script src="../shared/js/jquery-1.11.1.min.js"></script>
+        <script src="../shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
+        <script src="../shared/js/underscore-min.js"></script>
+        <!-- <script src="../shared/js/raphael-min.js"></script> -->
         <!-- cocolab experiment logic -->
 
-        <script src="../_shared/js/exp-V2.js"></script>
-        <script src="../_shared/js/stream-V2.js"></script><!-- cocolab general utilities -->
+        <script src="../shared/js/exp-V2.js"></script>
+        <script src="../shared/js/stream-V2.js"></script><!-- cocolab general utilities -->
 
-        <script src="../_shared/js/mmturkey.js"></script>
-        <script src="../_shared/js/browserCheck.js"></script>
+        <script src="../shared/js/mmturkey.js"></script>
+        <script src="../shared/js/browserCheck.js"></script>
         <script src="./js/utils.js"></script><!-- if you want to draw cute creatures (depends on raphael): -->
-        <!-- <script src="../_shared/js/ecosystem.js"></script> -->
+        <!-- <script src="../shared/js/ecosystem.js"></script> -->
         <!-- experiment specific helper functions -->
         <!-- <script src="js/local-utils.js"></script> -->
 
-        <script src="../_shared/preload.js"></script><!--CSS-->
-        <link href="../_shared/full-projects/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css">
-        <link href="../_shared/css/cocolab-style.css" rel="stylesheet" type="text/css">
+        <script src="../shared/preload.js"></script><!--CSS-->
+        <link href="../shared/full-projects/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css">
+        <link href="../shared/css/cocolab-style.css" rel="stylesheet" type="text/css">
         <link href="css/local-style.css" rel="stylesheet" type="text/css"><!-- experiment file -->
 
         <script src="js/stims.js"></script>
@@ -55,7 +55,7 @@
     <body onload="init();">
         <noscript>This task requires JavaScript.</noscript>
         <div class="slide" id="i0">
-            <img src="../_shared/images/alpslogo.png" alt="InterActive Language Processing Lab at Stanford">
+            <img src="../shared/images/alpslogo.png" alt="InterActive Language Processing Lab at Stanford">
             <p id="cocolab">
                 InterActive Language Processing Lab at Stanford
             </p>
