experiments/2_irt/experiment-cond-0.html

--- a/experiments/2_irt/experiment-cond-0.html
+++ b/experiments/2_irt/experiment-cond-0.html
@@ -60,7 +60,7 @@
                 InterActive Language Processing Lab at Stanford
             </p>
             <p id="instruct-text">
-                In this experiment, you will see several scenes and you will be asked to complete descriptions of these scenes. The HIT should take about 3-4 minutes. Please pay attention, thanks!
+                In this experiment, you will see several scenes and you will be asked to play a guessing game. The HIT should take about 10 minutes. Please pay attention, thanks!
             </p><input id="start_button" type="button" class="button" value="Start Experiment">
             <p id="legal">
                 <strong>LEGAL INFORMATION:</strong><br>
