add second condition, fix bonus description

--- a/experiments/2_irt/experiment-cond-1.html
+++ b/experiments/2_irt/experiment-cond-1.html
@@ -7,7 +7,7 @@
 
         <script type="text/javascript">
         //some/many
-        var CONDITION = "some";
+        var CONDITION = "many";
 
         </script><!-- external general utilities -->
 
