fix condition name

--- a/experiments/2_irt/experiment-cond-1.html
+++ b/experiments/2_irt/experiment-cond-1.html
@@ -6,8 +6,8 @@
         </title><!--JS-->
 
         <script type="text/javascript">
-        //some/many
-        var CONDITION = "many";
+        //some/most
+        var CONDITION = "most";
 
         </script><!-- external general utilities -->
 
