--- a/experiments/5_irt_no_prior/experiment-cond-3.html
+++ b/experiments/5_irt_no_prior/experiment-cond-3.html
@@ -7,7 +7,7 @@
 
         <script type="text/javascript">
         //some/most
-        var CONDITION = "many_most";
+        var CONDITION = "many_many";
 
         </script><!-- external general utilities -->
 
